// Especifica la versi칩n de la sintaxis de Protocol Buffers.
syntax = "proto3";

// Define el paquete de Go que se generar치. Evita colisiones de nombres.
option go_package = "lester-sys/proto";
package mensaje;

// El servicio "Greeter" define un conjunto de funciones remotas.
service Greeter {
  // Nuestra funci칩n remota. Recibe un HelloRequest y devuelve un HelloResponse.
  rpc GiveMission (MissionRequest) returns (MissionResponse);
  rpc ConfirmMission (MissionRequest) returns (ConfirmResponse);
}

// El mensaje de solicitud. Contiene el nombre de la persona a saludar.
message MissionRequest {
  string pregunta = 1;
}

// El mensaje de respuesta. Contendr치 el saludo final.
message MissionResponse {
  string hay = 1;
  string botin = 2;
  string prob_f = 3;
  string prob_t = 4;
  string riesgo = 5;
}

message ConfirmResponse {
  string conf = 1;
}